dashboard total job bug removed

--- a/hatcher_source/templates/credentials/landing_page.html
+++ b/hatcher_source/templates/credentials/landing_page.html
@@ -451,6 +451,7 @@
         }
 
         .modal-buttons {
+          width: 100%;
           padding: 10px;
           background-color: var(--primary-color);
           color: white;
@@ -528,7 +529,7 @@
             <div class="container">
                 <h1>Transform Your Career with Hatcher</h1>
                 <p>Elevate your professional journey with our innovative platform. Manage your profile, explore job and internship opportunities, and achieve your career goals faster than ever before.</p>
-                <a href="#" class="cta-button-large">Start Your Journey</a>
+                <img src="/media/hatcher_ss/hatcher_dashboard.png" alt="Hatcher Dashboard" style="max-width: 100%; height: auto; margin-top: 20px;">
             </div>
         </section>
 
@@ -576,7 +577,7 @@
             </div>
         </section>
 
-        <section id="pricing" class="pricing">
+        <!-- <section id="pricing" class="pricing">
             <div class="container">
                 <h2>Choose Your Plan</h2>
                 <div class="pricing-grid">
@@ -617,7 +618,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="cta">
             <div class="container">
@@ -642,7 +643,7 @@
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" name="message" required></textarea>
+                        <textarea id="message" name="feedback" required></textarea>
                     </div>
                     <button type="submit" class="cta-button">Send Message</button>
                 </form>
