--- a/hatcher_source/templates/emp_dashboard/candidates_profile.html
+++ b/hatcher_source/templates/emp_dashboard/candidates_profile.html
@@ -1,4 +1,4 @@
-{% extends '../blocks/dashboard_block.html' %}
+{% extends '../blocks/emp_dashboard.html' %}
 {% load profile_custom_filters %}
 {% block title %}Home{% endblock title %}
 {% block css %}
