--- a/hatcher_source/templates/profile/complete_profile.html
+++ b/hatcher_source/templates/profile/complete_profile.html
@@ -86,8 +86,8 @@
                     <label class="form-label compulsory " data-educating="" id="is_student_data">
                         Are you pursuing your education?
                     </label>
-                    <input type="radio" name="student" value="yes" id="student_radio" style="display: none;">
-                    <input type="radio" name="student" value="no" id="not_student_radio" style="display: none;">
+                    <input type="radio" name="student" value="True" id="student_radio" style="display: none;">
+                    <input type="radio" name="student" value="False" id="not_student_radio" style="display: none;">
                     <br>
                     <label for="student_radio"><span class="info-card rounded" id="student">Yes</span></label>
                     <label for="not_student_radio"><span class="info-card rounded" id="non_student">No</span></label>
@@ -455,14 +455,14 @@
                 <div class="mb-3 english_div">
                     <label  class="form-label compulsory ">English</label>
                     <div class="input-group custom_radio mb-3 ">
-                        <input type="radio" name="english" id="no_english" value="no_english" style="
+                        <input type="radio" name="english_level" id="no_english" value="no_english" style="
                             margin: 0px 10px 0 10px;
                             width: 18px;
                         ">
                         <label class="form-check-label" for="no_english">No English</label>
                     </div>
                     <div class="input-group custom_radio mb-3 ">
-                        <input type="radio" name="english" id="basic" value="basic" style="
+                        <input type="radio" name="english_level" id="basic" value="basic" style="
                             margin: 0px 10px 0 10px;
                             width: 18px;
                         ">
@@ -471,21 +471,21 @@
                         </label>
                     </div>
                     <div class="input-group custom_radio mb-3 ">
-                        <input type="radio" name="english" id="intermediate" value="intermediate" style="
+                        <input type="radio" name="english_level" id="intermediate" value="intermediate" style="
                             margin: 0px 10px 0 10px;
                             width: 18px;
                         ">
                         <label class="form-check-label" for="intermediate">Intermediate
-                            <p class="radio_p">You can understand/speak basic sentences</p>
+                            <p class="radio_p">You can have a conversation in English on some topic</p>
                         </label>
                     </div>
                     <div class="input-group custom_radio  ">
-                        <input type="radio" name="english" id="advanced" value="advanced" style="
+                        <input type="radio" name="english_level" id="advanced" value="advanced" style="
                             margin: 0px 10px 0 10px;
                             width: 18px;
                         ">
                         <label class="form-check-label" for="advanced">Advanced
-                            <p class="radio_p">You can understand/speak basic sentences</p>
+                            <p class="radio_p">You can do entire job in English ans speak fluently</p>
                         </label>
                     </div>
                 </div>
