--- a/hatcher_source/templates/blocks/emp_dashboard.html
+++ b/hatcher_source/templates/blocks/emp_dashboard.html
@@ -38,10 +38,10 @@
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link active fs-5" href="">Community</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active fs-5" href="">Profile</a>
             </li> -->
+            <li class="nav-item">
+              <a class="nav-link active fs-5" href="{% url 'employer:posted_jobs' %}">My Jobs</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link active fs-5" href="{% url 'employer:applications' %}">Applications</a>
             </li>
@@ -64,51 +64,50 @@
 
   {% endblock content %}
 
-  {% block javascripts %}
 
-  {% endblock javascripts %}
 
 
 
   <!-- Footer -->
-
+<br>
+<br><br>
   <div class="footer_mentions">
     <div class="footer_content">
       <!-- <span style="font-size: x-large;">Hatcher</span> -->
       <a href="">
         <img src="/media/logos/hatcher.png" width="150px" class="hatcher_logo2" alt="">
       </a>
-      <span>
+      <span class="d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 417" class="footer_img">
           <path
             d="M459.37 104.22c.32 4.54.32 9.1.32 13.64 0 138.72-105.58 298.56-298.55 298.56-59.45 0-114.68-17.22-161.14-47.1 8.45.97 16.57 1.3 25.34 1.3 49.05 0 94.21-16.58 130.27-44.84A105.12 105.12 0 0 1 57.51 253a132.7 132.7 0 0 0 19.81 1.62c9.42 0 18.84-1.3 27.61-3.57A104.95 104.95 0 0 1 20.8 148.07v-1.3a105.68 105.68 0 0 0 47.43 13.32A104.86 104.86 0 0 1 21.44 72.7c0-19.49 5.2-37.36 14.3-52.95a298.27 298.27 0 0 0 216.36 109.8c-1.62-7.8-2.6-15.91-2.6-24.03C249.5 47.69 296.28.58 354.44.58c30.2 0 57.5 12.67 76.67 33.14a206.6 206.6 0 0 0 66.6-25.34 104.65 104.65 0 0 1-46.14 57.83c21.12-2.28 41.59-8.13 60.43-16.25a225.57 225.57 0 0 1-52.63 54.26z">
           </path>
         </svg>
-        Twitter
+        <span>Twitter</span>
       </span>
-      <span>
+      <span class="d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="13" class="footer_img">
           <path
             d="M15.6 2c.4 1.4.4 4.4.4 4.4s0 3-.4 4.4c-.2.8-.8 1.4-1.5 1.6-1.4.4-6.1.4-6.1.4s-4.7 0-6-.4c-.8-.2-1.4-.8-1.6-1.6C0 9.4 0 6.4 0 6.4S0 3.4.4 2C.6 1.2 1.2.6 1.9.4 3.3 0 8 0 8 0s4.7 0 6 .4c.8.2 1.4.8 1.6 1.6zM6.4 9.2l4.8-2.8-4.8-2.8v5.6z">
           </path>
         </svg>
-        YouTube
+        <span>YouTube</span>
       </span>
-      <span>
+      <span class="d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="13" class="footer_img">
           <path
             d="M15.6 2c.4 1.4.4 4.4.4 4.4s0 3-.4 4.4c-.2.8-.8 1.4-1.5 1.6-1.4.4-6.1.4-6.1.4s-4.7 0-6-.4c-.8-.2-1.4-.8-1.6-1.6C0 9.4 0 6.4 0 6.4S0 3.4.4 2C.6 1.2 1.2.6 1.9.4 3.3 0 8 0 8 0s4.7 0 6 .4c.8.2 1.4.8 1.6 1.6zM6.4 9.2l4.8-2.8-4.8-2.8v5.6z">
           </path>
         </svg>
-        Instagram
+        <span>Instagram</span>
       </span>
-      <span>
+      <span class="d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 448 449" class="footer_img">
           <path
             d="M448 25.2v398.5c0 13.7-11.1 24.7-24.7 24.7H309.1V275h58.2l8.7-67.6h-67v-43.2c0-19.6 5.4-32.9 33.5-32.9h35.8V70.8c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9h-58.4V275h58.4v173.5H24.7C11.1 448.5 0 437.4 0 423.8V25.2C0 11.6 11.1.5 24.7.5h398.5C436.9.5 448 11.6 448 25.2z">
           </path>
         </svg>
-        Facebook
+        <span>Facebook</span>
       </span>
     </div>
     <div class="footer_content">
@@ -142,7 +141,9 @@
 
 
   <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  
+  {% block javascripts %}
+
+  {% endblock javascripts %}
 </body>
 
 </html>
