--- a/hatcher_source/templates/dashboard/community_post.html
+++ b/hatcher_source/templates/dashboard/community_post.html
@@ -4,13 +4,19 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/community_post.css' %}">
 {% endblock css %}
-
+<style>
+  .card-body {
+    max-width: 673px;
+    overflow-x: auto;
+}
+</style>
 {% block content %}
 
 <div class="container   mb-3" id="search-div">
   <form action="{% url 'community_post:post_filter' %}" id="form" method="post" class="d-flex flex-row 
   justify-content-evenly"
-    style="width: 90%;">
+    style="width: 94%;
+    margin: auto;">
      {% csrf_token %} 
     <input type="text" placeholder="Search any ......" name="search_keyword" class="form-control"
     style="width: 60%;"
