--- a/hatcher_source/templates/emp_dashboard/add_job.html
+++ b/hatcher_source/templates/emp_dashboard/add_job.html
@@ -12,6 +12,7 @@
 {% endblock css %}
 
 {% block content %}
+<h3 class="text-center mb-3">Add Job</h3>
 <form method="POST"  class="container-fluid detail_form " action="{% url 'employer:add_job' %}" 
 style="width: 60%;">
     {% csrf_token %}
@@ -37,7 +38,7 @@ style="width: 60%;">
     <label for="job_type_select" class="form-label">Job Type</label>
     <select class="form-select" aria-label="Default select example" name="job_type" id="job_type_select" required>
         <option value="Internship">Internship</option>
-        <option value="Full Time">Full Time</option>
+        <option value="Full time">Full Time</option>
         <option value="Part Time">Part Time</option>
         <option value="Hourly">Hourly</option>
       </select>
@@ -60,7 +61,8 @@ style="width: 60%;">
 
 
     <label for="perks" class="form-label">Any perks</label>
-    <input type="text" class="form-control" id="perks" name="perks " placeholder="Enter any perks [Performance Bonuses,5 Day Work Week, Flexible Work Hours, etc]" required>
+    
+    <input type="text" class="form-control" id="perks" name="perks " placeholder="Enter any perks [Performance Bonuses,5 Day Work Week, Flexible Work Hours, etc]" >
 
 
     <div class="mb-3">
@@ -167,26 +169,17 @@ style="width: 60%;">
 </form>
 {% endblock content %}
 {% block javascripts %} 
-<script>
-    tinymce.init({
-      selector: 'textarea',
-      plugins: [
-        // Core editing features
-        'anchor', 'autolink', 'charmap', 'codesample', 'emoticons', 'image', 'link', 'lists', 'media', 'searchreplace', 'table', 'visualblocks', 'wordcount',
-        // Your account includes a free trial of TinyMCE premium features
-        // Try the most popular premium features until Feb 11, 2025:
-        'checklist', 'mediaembed', 'casechange', 'export', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'editimage', 'advtemplate', 'ai', 'mentions', 'tinycomments', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown','importword', 'exportword', 'exportpdf'
-      ],
-      toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
-      tinycomments_mode: 'embedded',
-      tinycomments_author: 'Author name',
-      mergetags_list: [
-        { value: 'First.Name', title: 'First Name' },
-        { value: 'Email', title: 'Email' },
-      ],
-      ai_request: (request, respondWith) => respondWith.string(() => Promise.reject('See docs to implement AI Assistant')),
-    });
-  </script>
+<!-- Place the first <script> tag in your HTML's <head> -->
+    <script src="https://cdn.tiny.cloud/1/soxyc0slkpvfgmlokdnfg041ezsy3u17nfwc7j2skdsz4nbg/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+
+    <!-- Place the following <script> and <textarea> tags your HTML's <body> -->
+    <script>
+      tinymce.init({
+        selector: '#description',
+        plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
+        toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
+      });
+    </script>
 
     <script>
         // Function to toggle the salary input field based on the radio selection
