--- a/hatcher_source/templates/emp_dashboard/applications.html
+++ b/hatcher_source/templates/emp_dashboard/applications.html
@@ -36,7 +36,7 @@
               </div>
             </div>
             <div >
-              <p>Current application {{job.current_application}}</p>
+              <p>Current applicant {{job.current_application}}</p>
             </div>
           </div>
           <div class="d-flex justify-content-between">
