--- a/hatcher_source/templates/partial/community_partial.html
+++ b/hatcher_source/templates/partial/community_partial.html
@@ -20,9 +20,11 @@
           <span style="color: gray; font-size: 14px;">{{ post.updated_at }}</span>
         </div>
       </div>
+      <a href="{% url 'community_post:edit_post' post.id %}">
       <svg class="pencil-icon" -data-post-id = "{{post.id}}" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"></path>
       </svg>
+    </a>
     </div>
 
     <!-- Post content -->
