--- a/hatcher_source/templates/partial/home_partial.html
+++ b/hatcher_source/templates/partial/home_partial.html
@@ -1,7 +1,7 @@
 {% if jobs %}
-{%for c in jobs%}
+{%for c in jobs|slice:":10" %}
 <div class="add_pad">
-  <div class="card card_id_contain" data-job-id={{c.id}} style="border-radius: 14px;cursor: pointer;">
+  <div class="card card_id_contain" onclick="job_details_page(event)" data-job-id={{c.id}} style="border-radius: 14px;cursor: pointer;">
     <div class="card-body">
       <div class="job_cards mb-2">
         <div class="job_cards">
@@ -40,12 +40,13 @@
             <img src="/media/logos/rupee.png" alt="" width="15" style="
             margin-right: -3px;
             margin-top: -2px;">
-            {{c.salary_maximum}} monthly
+            {{c.salary_maximum}} 
         </span>
-        {% endif %}
+        {% else %}
         <span style="color: gray;font-size: 16px;margin-left: 5px;">
           Not-Disclose
         </span>
+        {% endif %}
       </div>
       <div class="d-flex " style="margin-top: 10px;overflow: hidden;">
         <!-- <div class="info-card rounded ">{{c.title}}</div> -->
@@ -69,7 +70,7 @@
         <div class="info-card rounded ">{{c.req_skill__education}}</div>
         {% endif %}
       </div>
-      <p class="card-updated"><small class="text-body-secondary">{{ c.updated_at|custom_timesince }}
+      <p class="card-updated"><small class="text-body-secondary">{{ c.updated_at|timesince }}
         </small></p>
     </div>
   </div>
