--- a/hatcher_source/templates/emp_dashboard/Posted_job.html
+++ b/hatcher_source/templates/emp_dashboard/Posted_job.html
@@ -1,5 +1,5 @@
 {% extends '../blocks/emp_dashboard.html' %}
-{% block title %}Home{% endblock title %}
+{% block title %}My Jobs{% endblock title %}
 {% block css %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/job_detail.css' %}">
@@ -10,7 +10,7 @@
 </style>
 {% endblock css %}
 {% block content %}
-<div class="main-container ">
+<div class="main-container w-50">
 
 
   <div class="container-1">
@@ -215,10 +215,6 @@
         </div>
       </div>
     {% endif %}
-  </div>
-  
-  <div class="container-2">
-    <img src="https://cdn.apna.co/cloudinary/employer-dashboard-images/Logged%20in.png" width="335" alt="" class="">
   </div>
 </div>
 
