--- a/hatcher_source/templates/emp_dashboard/applicant_user.html
+++ b/hatcher_source/templates/emp_dashboard/applicant_user.html
@@ -1,5 +1,5 @@
 {% extends '../blocks/emp_dashboard.html' %}
-{% block title %}Home{% endblock title %}
+{% block title %}Applicant{% endblock title %}
 {% load profile_custom_filters %}
 {% block css %}
 {% load static %}
