--- a/hatcher_source/templates/emp_dashboard/candidates_profile.html
+++ b/hatcher_source/templates/emp_dashboard/candidates_profile.html
@@ -1,6 +1,7 @@
 {% extends '../blocks/emp_dashboard.html' %}
+
 {% load profile_custom_filters %}
-{% block title %}Home{% endblock title %}
+{% block title %}User Profile{% endblock title %}
 {% block css %}
 {% load static %}
 
@@ -998,7 +999,6 @@
             {% else %}
             <div class="section-header">
                 <h2 class="section-title">Employment</h2>
-                <
             </div>
 
             <div class="description">
