--- a/hatcher_source/templates/dashboard/applications.html
+++ b/hatcher_source/templates/dashboard/applications.html
@@ -1,5 +1,5 @@
 {% extends '../blocks/dashboard_block.html' %}
-{% block title %}Home{% endblock title %}
+{% block title %}Applications{% endblock title %}
 {% block css %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/job_detail.css' %}">
